<resources>
    <string name="app_name">Hello_Doctor</string>
    <string name="regular">Regular</string>
    <string name="new_appoint">New Appoint</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="make_appointment">Make Appointment</string>
    <string name="textview">TextView</string>
    <string name="textview1">TextView1</string>
    <string name="textview2">TextView2</string>
    <string name="id_number">ID Number</string>
    <string name="note">Note</string>
    <string name="register">Register</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register1">Register1</string>
    <string name="emailaddress">EmailAddress</string>
    <string name="bookapp">bookApp</string>
    <string name="profilepic">ProfilePic</string>
    <string name="previousap">PreviousAp</string>
    <string name="logoutbtn">LogOutBtn</string>
    <string name="informationbtnMenu">InformationBtn</string>
    <string name="messagesmenubtn">MessagesMenuBtn</string>
    <string name="hello_doctor">Hello_Doctor</string>
    <string name="id_number11">ID number</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="phone_no">Phone No.</string>
    <string name="password111">Password</string>
    <string name="id_number1111">id number</string>
    <string name="firstname1234">firstname</string>
    <string name="last_name">last name</string>
    <string name="email">Email</string>
    <string name="phone_no12345">Phone No</string>
    <string name="back">Back</string>
    <string name="registration">Registration</string>
    <string name="input_password">input Password</string>
    <string name="emailaddressee">EmailAddress</string>
    <string name="backCbt">Back</string>
    <string name="confirmBt">Confirm</string>
    <string name="appointment_details">Appointment details</string>
    <string name="confirm_password">confirm Password</string>
    <string name="hello_doctor123">HELLO_DOCTOR</string>
    <string name="hello_doctor11">HELLO_DOCTOR</string>
    <string name="your_history_will_show_here">Your history will show here.</string>
    <string name="history">History</string>
    <string name="mainmenu111">MainMenu</string>
    <string name="home">Home</string>
    <string name="textview111">TextView</string>
    <string name="updates">Updates</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">new Password</string>
    <string name="firstname123">firstname</string>
    <string name="retrieve_info">Retrieve info</string>
    <string name="login_1">Login</string>
    <string name="name">Name</string>
    <string name="phone_no12">Phone No</string>
    <string name="email124">Email</string>
    <string name="confirm">Confirm</string>
    <string name="firstname12">FirstName</string>
    <string name="name12">Name</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="name1223">Name</string>
    <string name="name1234">Name</string>
    <string name="first_name">First Name</string>
    <string name="phone_number">Phone number</string>
    <string name="date123">Date</string>
    <string name="delete">Delete</string>
    <string name="login12">LOGIN</string>
    <string name="register123">register</string>
    <string name="want_to_change_password">want to change password?</string>
    <string name="home12345">home</string>
    <string name="no_previous_appointments">No Previous Appointments</string>
    <string name="id_no">Id no</string>
    <string name="id_number12">id_number</string>
</resources>