<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/stethoscope_app"
    tools:context=".Confirmation">

    <Button
        android:id="@+id/ConBtn"
        android:layout_width="133dp"
        android:layout_height="52dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="644dp"
        android:layout_marginEnd="257dp"
        android:layout_marginBottom="35dp"
        android:text="@string/confirmBt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/BackCbtn"
        android:layout_width="127dp"
        android:layout_height="51dp"
        android:layout_marginStart="262dp"
        android:layout_marginTop="644dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="36dp"
        android:text="@string/backCbt"
        android:textColor="#81D4FA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="142dp"
        android:layout_marginEnd="325dp"
        android:layout_marginBottom="570dp"
        android:text="@string/firstname12"
        android:textColor="#263238"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editFName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginTop="127dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="559dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#212121"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="58dp"
        android:layout_height="24dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="206dp"
        android:layout_marginEnd="332dp"
        android:layout_marginBottom="501dp"
        android:text="@string/email124"
        android:textColor="#263238"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editEmailName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="154dp"
        android:layout_marginTop="195dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="491dp"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:text="@string/name1223"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="279dp"
        android:layout_marginEnd="329dp"
        android:layout_marginBottom="433dp"
        android:text="@string/id_no"
        android:textColor="#37474F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Edit_IdName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="154dp"
        android:layout_marginTop="263dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="423dp"
        android:ems="10"
        android:hint="@string/id_number12"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="711dp" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="171dp"
        android:layout_height="44dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="641dp"
        android:text="@string/confirm"
        android:textAlignment="center"
        android:textColor="#212121"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/DateTxt"
        android:layout_width="154dp"
        android:layout_height="50dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="389dp"
        android:layout_marginEnd="231dp"
        android:layout_marginBottom="292dp"
        android:ems="10"
        android:hint="@string/date123"
        android:importantForAutofill="no"
        android:inputType="date"
        android:text="@string/name12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/EditTxtTime"
        android:layout_width="157dp"
        android:layout_height="48dp"
        android:layout_marginStart="232dp"
        android:layout_marginTop="389dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="297dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="36dp"
        android:layout_height="20dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="356dp"
        android:layout_marginEnd="341dp"
        android:layout_marginBottom="355dp"
        android:text="@string/date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="255dp"
        android:layout_marginTop="357dp"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="355dp"
        android:text="@string/time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/DeleteBtn"
        android:layout_width="161dp"
        android:layout_height="54dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="510dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="167dp"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>