<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/stethoscope_app"
    tools:context=".Register">

    <TextView
        android:id="@+id/passConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="561dp"
        android:layout_marginEnd="281dp"
        android:layout_marginBottom="151dp"
        android:text="@string/confirm_password"
        android:textColor="#F6F0F0"
        android:textColorHint="#F6F0F0"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ConfirmPassword"
        android:layout_width="230dp"
        android:layout_height="48dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="547dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="136dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="77dp"
        android:layout_height="22dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="313dp"
        android:layout_marginBottom="584dp"
        android:text="@string/firstname"
        android:textColor="#F6F0F0"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/firstnameTxBx"
        android:layout_width="226dp"
        android:layout_height="51dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="105dp"
        android:layout_marginBottom="575dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/firstname1234"
        android:inputType="textPersonName"
        android:textColorHint="#F1E9E9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="204dp"
        android:layout_marginEnd="325dp"
        android:layout_marginBottom="508dp"
        android:text="@string/lastname"
        android:textColor="#F6F0F0"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="LastName" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="356dp"
        android:layout_marginEnd="303dp"
        android:layout_marginBottom="356dp"
        android:text="@string/emailaddressee"
        android:textColor="#F6F0F0"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="EmailAddress" />

    <EditText
        android:id="@+id/EditTextLastName"
        android:layout_width="227dp"
        android:layout_height="48dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="187dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="498dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="#EFE8E8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/EmailAddressTxtR"
        android:layout_width="228dp"
        android:layout_height="48dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="341dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="342dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#F6F0F0"
        android:textColorHint="#F6F0F0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/passText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="493dp"
        android:layout_marginEnd="328dp"
        android:layout_marginBottom="219dp"
        android:text="@string/password111"
        android:textColor="#F6F0F0"
        android:textColorHint="#F6F0F0"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/PhoneTx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="421dp"
        android:layout_marginEnd="322dp"
        android:layout_marginBottom="291dp"
        android:text="@string/phone_no"
        android:textColor="#F6F0F0"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/EditTextIDno"
        android:layout_width="227dp"
        android:layout_height="49dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="268dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="414dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/id_number1111"
        android:inputType="textPersonName"
        android:textColorHint="#F6F0F0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/RegisterPassword"
        android:layout_width="230dp"
        android:layout_height="48dp"
        android:layout_marginStart="145dp"
        android:layout_marginTop="479dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="204dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#F6F0F0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Id_num"
        android:layout_width="71dp"
        android:layout_height="21dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="284dp"
        android:layout_marginEnd="319dp"
        android:layout_marginBottom="426dp"
        android:text="@string/id_number11"
        android:textColor="#F6F0F0"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/RegisterBut"
        android:layout_width="161dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="619dp"
        android:layout_marginEnd="234dp"
        android:layout_marginBottom="60dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck"
        tools:text="Register" />

    <Button
        android:id="@+id/BackBtnRegi"
        android:layout_width="106dp"
        android:layout_height="48dp"
        android:layout_marginStart="261dp"
        android:layout_marginTop="619dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="64dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/TextBxPhone"
        android:layout_width="230dp"
        android:layout_height="49dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="407dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="275dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/phone_no12345"
        android:inputType="phone"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="233dp"
        android:layout_height="46dp"
        android:layout_marginStart="93dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="650dp"
        android:text="@string/registration"
        android:textAlignment="center"
        android:textColor="#212121"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>