<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/stethoscope_app"
    android:layout_height="match_parent"
    tools:context=".changePass">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="196dp"
        android:layout_height="35dp"
        android:layout_marginStart="123dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="680dp"
        android:text="@string/change_password"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="360dp"
        android:layout_marginBottom="588dp"
        android:text="@string/email"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editEMailChangePass"
        android:layout_width="243dp"
        android:layout_height="48dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="105dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="578dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="372dp"
        android:layout_marginEnd="335dp"
        android:layout_marginBottom="340dp"
        android:text="@string/firstname123"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="436dp"
        android:layout_marginEnd="303dp"
        android:layout_marginBottom="276dp"
        android:text="@string/new_password"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextChangePassword"
        android:layout_width="246dp"
        android:layout_height="48dp"
        android:layout_marginStart="153dp"
        android:layout_marginTop="421dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="262dp"
        android:ems="10"
        android:hint="@string/input_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColorHint="#757575"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/EditChangeConfirmPassword"
        android:layout_width="242dp"
        android:layout_height="48dp"
        android:layout_marginStart="153dp"
        android:layout_marginTop="490dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="193dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColorHint="#757575"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="502dp"
        android:layout_marginEnd="288dp"
        android:layout_marginBottom="210dp"
        android:text="@string/confirm_password"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/EditFnameTxt"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_marginStart="153dp"
        android:layout_marginTop="352dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="331dp"
        android:clickable="false"
        android:editable="false"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/firstname"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="199dp"
        android:layout_marginEnd="328dp"
        android:layout_marginBottom="513dp"
        android:text="@string/id_number"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextIDChangePass"
        android:layout_width="237dp"
        android:layout_height="49dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="186dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="496dp"
        android:ems="10"
        android:hint="@string/id_number"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/RetrieveDatBtn"
        android:layout_width="201dp"
        android:layout_height="48dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="256dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="430dp"
        android:text="@string/retrieve_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Change_password"
        android:layout_width="160dp"
        android:layout_height="55dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="599dp"
        android:layout_marginEnd="229dp"
        android:layout_marginBottom="77dp"
        android:text="@string/change_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/goLoginBtn"
        android:layout_width="158dp"
        android:layout_height="51dp"
        android:layout_marginStart="216dp"
        android:layout_marginTop="599dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="81dp"
        android:text="@string/login_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>